--- a/src/components/routes/navigation/navigation.styles.scss
+++ b/src/components/routes/navigation/navigation.styles.scss
@@ -1,21 +1,22 @@
 .navigation {
-    height: 70px;
+    height: auto; // Changed from 70px to auto
     width: 100%;
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    padding: 0 20px;
+    align-items: center; // Changed back to center
+    padding: 0 20px 2px 20px; 
     background-color: #fff;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 2px 4px rgba(120, 51, 51, 0.1);
   
     .logo-container {
-      height: 100%;
       width: auto;
       padding: 0;
+      margin-left: 20px;
   
       .logo {
-        height: 180px;
+        height: 50px;
         width: auto;
+        margin: 0;
       }
     }
   
@@ -23,16 +24,17 @@
       display: flex;
       align-items: center;
       justify-content: flex-end;
+      margin-right: 70px;
+
   
       .nav-link {
         padding: 10px 20px;
-        font-size: 16px;
+        font-size: 19px;
         text-decoration: none;
-        color: #333;
+        color: #6e0c0c;
         transition: color 0.3s ease;
-  
         &:hover {
-          color: #007bff;
+          color: #742742;
         }
       }
     }
